# PyViCare

./: .editorconfig  .flake8  .gitignore  .prettierignore  .pylintrc  .pypirc  Makefile  PyViCare.py  README.md  check_deprecations.py  feature-diff.txt  feature-list.txt  feature-v1.txt  feature-v2.txt  format.sh  lint.sh  mypy.ini  new.json  publish.sh  pyproject.toml  raw.json  requirements.txt  run_tests.sh  setup.py  single-request.py  v2_features_response_Vitodens200-W.json
.devcontainer/: devcontainer.json
.github/: renovate.json
.github/workflows/: build.yml  draft-release.yml  format.yml  lint.yml  release.yml  test.yml  type.yml
PyViCare/: Feature.py  PyViCare.py  PyViCareAbstractOAuthManager.py  PyViCareBrowserOAuthManager.py  PyViCareCachedService.py  PyViCareCachedServiceBase.py  PyViCareCachedServiceV2.py  PyViCareCachedServiceViaGateway.py  PyViCareDevice.py  PyViCareDeviceConfig.py  PyViCareElectricalEnergySystem.py  PyViCareFloorHeating.py  PyViCareFloorHeatingCircuitChannel.py  PyViCareFloorHeatingDevice.py  PyViCareFuelCell.py  PyViCareGateway  PyViCareGateway.py  PyViCareGaz.py  PyViCareGazBoiler.py  PyViCareHeatCurveCalculation.py  PyViCareHeatPump.py  PyViCareHeatingDevice.py  PyViCareHybrid.py  PyViCareInstallation.py  PyViCareOAuthManager.py  PyViCareOilBoiler.py  PyViCarePelletsBoiler.py  PyViCareRadiatorActuator.py  PyViCareRepeater.py  PyViCareRoomControl.py  PyViCareRoomSensor.py  PyViCareService.py  PyViCareServiceBuilder.py  PyViCareServiceFactory.py  PyViCareServiceV2.py  PyViCareServiceViaGateway.py  PyViCareUtils.py  PyViCareVentilationDevice.py  PyViCareWaterTreatment.py  __init__.py
PyViCare/Features/: FeatureVentilation.py  FeatureVentilationModePermanent.py  FeatureVentilationModes.py  FeatureVentilationQuickmodes.py  FeatureVentilationState.py
PyViCare/generic/: PyViCareGenericDevice.py
PyViCare/heating/: PyViCareFuelCell.py  PyViCareGazBoiler.py  PyViCareHeatPump.py  PyViCareHeatingDevice.py  PyViCareHybrid.py  PyViCareOilBoiler.py  PyViCarePelletsBoiler.py
PyViCare/radiator/: PyViCareRadiatorActuator.py
PyViCare2/: Feature.py  PyViCare.py  PyViCareAbstractOAuthManager.py  PyViCareBrowserOAuthManager.py  PyViCareCachedService.py  PyViCareDevice.py  PyViCareDeviceConfig.py  PyViCareElectricalEnergySystem.py  PyViCareFuelCell.py  PyViCareGateway.py  PyViCareGazBoiler.py  PyViCareHeatCurveCalculation.py  PyViCareHeatPump.py  PyViCareHeatingDevice.py  PyViCareHybrid.py  PyViCareOAuthManager.py  PyViCareOilBoiler.py  PyViCarePelletsBoiler.py  PyViCareRadiatorActuator.py  PyViCareRoomSensor.py  PyViCareService.py  PyViCareUtils.py  PyViCareVentilationDevice.py  __init__.py
tests/: ViCareGatewayServiceMock.py  ViCareServiceForTesting.py  ViCareServiceMock.py  ViCareServiceMockV2.py  deprecated_features.json  helper.py  response_Vitocal200.json  response_Vitocal200_V2.json  response_Vitodens111W.json  response_Vitodens200W.json  response_Vitodens200W_V2.json  response_Vitodens222F.json  response_Vitodens222F_notarget.json  response_Vitodens222W.json  response_Vitodens300W.json  response_VitovalorPT2.json  response_rate_limit.json  test.json  test_E3_TCU300_ethernet.py  test_Ecotronic.py  test_GasConfiguration.py  test_GenericDevice.py  test_Implementation.py  test_Integration.py  test_PyViCareCachedService.py  test_PyViCareCachedServiceViaGateway.py  test_PyViCareDeviceConfig.py  test_PyViCareExceptions.py  test_PyViCareService.py  test_PyViCareServiceViaGateway.py  test_RoomControl.py  test_Solar.py  test_TestData.py  test_TestForMissingProperties.py  test_Utils.py  test_ViCareOAuthManager.py  test_Viessmann111W.py  test_VitoairFs300E.py  test_Vitocal111S.py  test_Vitocal151A.py  (+49 more)
tests/response/: Ecotronic.json  RoomControl.json  Solar.json  TCU300_ethernet.json  ViCareClimateSensor(E3_RoomSensor).json  ViCareFloorHeatingDistributionBox(E3_FloorHeatingCircuitChannel-1).json  ViCareFloorHeatingDistributionBox(E3_FloorHeatingCircuitDistributorBox).json  Viessmann CU401B G (Vitocal 300-G).json  VitoairFs300E.json  Vitocal 200-S.json  Vitocal-200S-with-Vitovent-300W.json  Vitocal111S.json  Vitocal151A.json  Vitocal200.json  Vitocal200S-with-Vitovent300W.json  Vitocal200S.json  Vitocal200S_AWB-M-E-AC-201.D10.json  Vitocal200S_E8NEV.json  Vitocal222S-with-Vitovent.json  Vitocal222S.json  Vitocal222SI_Invisible(E3_TCU68).json  Vitocal250A.json  Vitocal252.json  Vitocal252A.json  Vitocal262A.json  Vitocal262A_T2H-R290.json  Vitocal300G.json  Vitocal300G_CU401B.json  Vitocal333G-with-Vitovent300F.json  Vitocal333G.json  Vitocaldens222F.json  Vitocharge03.json  Vitocharge05.json  VitochargeVX3.json  VitoconnectOpto1.json  VitoconnectOpto2.json  Vitodens050W.json  Vitodens050W_2.json  Vitodens100NA.json  Vitodens100W.json  (+34 more)
tests/response/deviceerrors/: F.1100.json
tests/response/errors/: device_offline.json  error_500.json  rate_limit.json
tests/response/gatewayWithDevices/heatbox1/: VitoConnect-1-with-VitoDens-300W.json  Vitodens-300-W-B3HA.json
tests/response/gatewayWithDevices/heatbox2/: Vitodens-300-W-WB3D-with-TRV.json
tests/response/gatewayWithDevices/tcu1/: TCU-with-VitoPure350.json  Vitopure-350.json
