[tool.poetry]
name = "PyViCare"
version = "0.1.0"
description = "Library to communicate with the Viessmann ViCare API."
authors = [
  "Simon Gillet <mail+pyvicare@gillet.ninja>"
]
maintainers = [
  "Christopher Fenner <fenner.christopher@gmail.com>",
  "Martin",
  "Lukas Wöhrl",
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/openviess/PyViCare"
repository = "https://github.com/openviess/PyViCare"
documentation = "https://github.com/openviess/PyViCare"
keywords = [
  "viessmann",
  "vicare",
  "api"
]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
]
packages = [
    { include = "PyViCare", from = "." },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/openviess/PyViCare/issues"
Changelog = "https://github.com/openviess/PyViCare/releases"

[tool.poetry.dependencies]
authlib = ">1.2.0"
python = "^3.9"
requests = ">=2.31.0"
deprecated = "^1.2.15"

[tool.poetry.group.dev.dependencies]
codespell = "^2.3.0"
mypy = "^1.11.2"
pylint = "^3.2.6"
pytest = "^8.3.2"
pytest-cov = "^6.0.0"
ruff = "^0.12.0"
types-deprecated = "^1.2.15.20241117"
types-requests = ">=2.31"

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.11"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "duplicate-code",
    "fixme",
    "line-too-long",
    "invalid-name",
    "too-many-public-methods",
    "too-few-public-methods",
    # FIXME:
    "arguments-differ",
    "attribute-defined-outside-init",
    "bad-classmethod-argument",
    "chained-comparison",
    "consider-merging-isinstance",
    "consider-using-dict-items",
    "consider-using-generator",
    "deprecated-decorator",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-timeout",
    "raise-missing-from",
    "unspecified-encoding",
    "useless-object-inheritance",
    "useless-parent-delegation",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
